demoProject/convert/objects/BatchLeadConvertErrors__c.object
<CustomObject>
    <label>Batch Lead Convert Errors</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Batch Lead Convert Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Lead Convert Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>AsyncApexJobId__c</fullName>
        <label>AsyncApexJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records__c</fullName>
        <label>Records</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>